methods.basics.Methods.scala.error
Erreur de compilation :
Methods:8: error: not found: value a
      a = a + 1}
      ^Methods:11: error: not found: value a
for (i<-1 to a) {
             ^